# cw20-adapter

./: Cargo.toml
contracts/cw20-adapter/: Cargo.toml  README.md
contracts/cw20-adapter/examples/: schema.rs
contracts/cw20-adapter/src/: common.rs  contract.rs  error.rs  execute.rs  execute_metadata.rs  execute_receive.rs  execute_redeem.rs  execute_register.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw20-adapter/tests/: execute_metadata_tests.rs  execute_receive_tests.rs  execute_redeem_tests.rs  execute_register_tests.rs  integration_test.rs  tests.rs
contracts/cw20-adapter/tests/common/: mod.rs
