[workspace]
members = ["contracts/*"]

[workspace.package]
version = "0.0.0"
authors = ["Larry Engineer <gm@larry.engineer>"]
edition = "2021"
license = "AGPL-v3-or-later"
homepage = "https://larry.engineer"
repository = "https://github.com/steak-enjoyers/cw-template"
documentation = "https://github.com/steak-enjoyers/cw-template#readme"
keywords = ["blockchain", "cosmos", "cosmwasm"]
rust-version = "1.64.0"

[workspace.dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw2 = "0.16"
cw20 = "0.16.0"
cw-storage-plus = "0.16"
thiserror = "1.0"
cw-item-set = "0.6.0"
regex = "1.7.0"
injective-cosmwasm = "0.1.69"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[patch.crates-io]
cw-multi-test = { git = "https://github.com/Tofel/cw-multi-test.git", branch ="feat/custom_address_generator" }
cw20-base = { path = "../cw-plus/contracts/cw20-base" }